v1.1.8
- Switch default downloads to server kindly provided by Ziggy
- Add additional screensavers

v1.1.7
- Prevent possible deadlock while background media is playing

v1.1.6
- Add option to use Audio Engine Suspend for disabling volume

v1.1.5
- Support running the screensaver as a script

v1.1.4
- Fix Ocean 1 download

v1.1.3
- Add additional Aquarium, Christmas, Johnny Castaway and Ocean screensavers

v1.1.2
- Add option to reset volume on startup

v1.1.1
- Set variable when VideoScreensaver is running so other addons know about it

v1.1.0
- Add option to set an overlay image

v1.0.9
- Fix issue where existing screensaver file is never over-written
- Add message if sceeensaver video failed to download correctly
- Add Snow and Watermill screensavers

v1.0.8
- Add additional beach, matrix, sci-fi, space, waterfall and woodland screensavers
- Add special check to see if TvTunes is still running

v1.0.7
- Move screensaver videos to different host
- Add beach and space screensaver

v1.0.6
- Add option to stop the screensaver after a set amount of time
- Give time for other programs to stop before starting screensaver
- Support repeating just a single video from a folder

v1.0.5
- Handle error if screensaver video not set
- Prevent black screen if playing media when screensaver launches

v1.0.4
- Add option to change the volume
- Allow the screen to be dimmed during the screensaver video

v1.0.3
- Add option to prevent the screensaver starting if playing media already
- Turn off repeat when exiting the screensaver

v1.0.2
- Fix error getting file details

v1.0.1
- Add option to use multiples video files

v1.0.0
- Initial Version