@@ -1,6 +1,7 @@
 v1.1.8
 - Switch default downloads to server kindly provided by Ziggy
 - Add additional screensavers
+- Add clock screensaver support
 
 v1.1.7
 - Prevent possible deadlock while background media is playing
